--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,10 @@ file(GLOB SOURCES "./*/*.cpp")
 #compile flags
 set(CMAKE_CXX_FLAGS "-Wall -std=c++11 -g -pedantic")
 
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+find_library(PTHREAD_LIB pthread)
+
 foreach( sourcefile ${SOURCES} )
         get_filename_component( demo_name ${sourcefile} NAME_WE )
 		if (${demo_name} STREQUAL "pstring")
@@ -22,9 +26,11 @@ foreach( sourcefile ${SOURCES} )
             continue()
 		endif()
         add_executable( ${demo_name} ${sourcefile} )
+		if (${demo_name} STREQUAL "SleepSort")
+			target_link_libraries (${demo_name} ${PTHREAD_LIB})
+            continue()
+		endif()
 		if (${demo_name} STREQUAL "pstring_test")
 			target_link_libraries (${demo_name} pstring pUnitTest)
-		endif()
-            continue()
 		endif()
 endforeach( sourcefile ${SOURCES} )
